--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main">
-        <div class="nav-bar">
+        <div class="navbar">
             <div class="upper-nav">
                 <input type="text" name="search" id="search">
                 <img id="notification" src="" alt="notification bell">
@@ -26,7 +27,7 @@
             </div>
         </div>
 
-        <div class="side-bar">
+        <div class="sidebar">
             <div class="logo">
                 <img src="" alt="logo">
                 <a href="">Dashboard</a>
@@ -49,31 +50,49 @@
         </div>
         <div class="content">
             <div class="projects">
-                <p>Your Projects</p>
-                <div class="project-item"></div>
-                <div class="project-item"></div>
-                <div class="project-item"></div>
-                <div class="project-item"></div>
-                <div class="project-item"></div>
-                <div class="project-item"></div>
+                <p class="project-header">Your Projects</p>
+                <div class="project-item">
+                    <p class="project-title">Super Cool Project</p>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                </div>
+                <div class="project-item">
+                    <p class="project-title">Super Cool Project</p>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                </div>
+                <div class="project-item">
+                    <p class="project-title">Super Cool Project</p>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                </div>
+                <div class="project-item">
+                    <p class="project-title">Super Cool Project</p>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                </div>
+                <div class="project-item">
+                    <p class="project-title">Super Cool Project</p>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                </div>
+                <div class="project-item">
+                    <p class="project-title">Super Cool Project</p>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                </div>
             </div>
             <div class="announcements">
-                <p>Announcements</p>
+                <p class="announcement-header">Announcements</p>
                 <div class="announcement-item">
-                    <p>Site Maintenance</p>
+                    <p class="announcement-title">Site Maintenance</p>
                     <p>Vestibulum condimentum tellus lacus, in a ccumasan elit maximus ac. Donec hendrerit sodales congue...</p>
                 </div>
                 <div class="announcement-item">
-                    <p>Site Maintenance</p>
+                    <p class="announcement-title">Site Maintenance</p>
                     <p>Vestibulum condimentum tellus lacus, in a ccumasan elit maximus ac. Donec hendrerit sodales congue...</p>
                 </div>
                 <div class="announcement-item">
-                    <p>Site Maintenance</p>
+                    <p class="announcement-title">Site Maintenance</p>
                     <p>Vestibulum condimentum tellus lacus, in a ccumasan elit maximus ac. Donec hendrerit sodales congue...</p>
                 </div>
             </div>
             <div class="trending">
-                <p>Trending</p>
+                <p class="trending-header">Trending</p>
                 <div class="trending-item">
                     <img class="user-image" src="" alt="">
                     <p>@tegan</p>
