Add styles to main section

--- a/index.html
+++ b/index.html
@@ -52,73 +52,85 @@
             </div>
         </div>
         <div class="main">
-            <div class="projects">
-                <p class="project-header">Your Projects</p>
+            <p class="project-header">Your Projects</p>
+            <div class="project-container">
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-solid fa-share-nodes"></i>
                 </div>
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-solid fa-share-nodes"></i>
                 </div>
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-solid fa-share-nodes"></i>
                 </div>
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-solid fa-share-nodes"></i>
                 </div>
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-solid fa-share-nodes"></i>
                 </div>
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-solid fa-share-nodes"></i>
                 </div>
             </div>
-            <div class="announcements">
-                <p class="announcement-header">Announcements</p>
+            <p class="announcement-header">Announcements</p>
+            <div class="announcement-container">
                 <div class="announcement-item">
                     <p class="announcement-title">Site Maintenance</p>
                     <p>Vestibulum condimentum tellus lacus, in a ccumasan elit maximus ac. Donec hendrerit sodales congue...</p>
                 </div>
                 <div class="announcement-item">
-                    <p class="announcement-title">Site Maintenance</p>
-                    <p>Vestibulum condimentum tellus lacus, in a ccumasan elit maximus ac. Donec hendrerit sodales congue...</p>
+                    <p class="announcement-title">Community Share Day</p>
+                    <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
                 </div>
                 <div class="announcement-item">
-                    <p class="announcement-title">Site Maintenance</p>
-                    <p>Vestibulum condimentum tellus lacus, in a ccumasan elit maximus ac. Donec hendrerit sodales congue...</p>
+                    <p class="announcement-title">Updated Privacy Policy</p>
+                    <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
                 </div>
             </div>
-            <div class="trending">
-                <p class="trending-header">Trending</p>
+            <p class="trending-header">Trending</p>
+            <div class="trending-container">
                 <div class="trending-item">
-                    <img class="user-image" src="" alt="">
-                    <p>@tegan</p>
+                    <img class="user-image" src="images/profile_01.png" alt="">
+                    <p class="username">@tegan</p>
                     <p>World Peace Builder</p>
                 </div>
                 <div class="trending-item">
-                    <img class="user-image" src="" alt="">
-                    <p>@tegan</p>
-                    <p>World Peace Builder</p>
+                    <img class="user-image" src="images/profile_02.png" alt="">
+                    <p class="username">@morgan</p>
+                    <p>Super Cool Project</p>
                 </div>
                 <div class="trending-item">
-                    <img class="user-image" src="" alt="">
-                    <p>@tegan</p>
-                    <p>World Peace Builder</p>
+                    <img class="user-image" src="images/profile_03.png" alt="">
+                    <p class="username">@kendall</p>
+                    <p>Life Changing App</p>
                 </div>
                 <div class="trending-item">
-                    <img class="user-image" src="" alt="">
-                    <p>@tegan</p>
-                    <p>World Peace Builder</p>
+                    <img class="user-image" src="images/profile_04.png" alt="">
+                    <p class="username">@alex</p>
+                    <p>No Traffic Maker</p>
                 </div>
             </div>
+            <footer><a href="https://www.freepik.com/free-vector/vector-set-men-professions_3238354.htm#&position=0&from_view=search&track=ais&uuid=76e8df2a-3ea8-499e-a4d0-fc3620d072d7">Image by rawpixel.com</a> on Freepik</footer>
         </div>
     </div>
-    <footer><a href="https://www.freepik.com/free-vector/vector-set-men-professions_3238354.htm#&position=0&from_view=search&track=ais&uuid=76e8df2a-3ea8-499e-a4d0-fc3620d072d7">Image by rawpixel.com</a> on Freepik</footer>
 </body>
 </html>
