Add @media & js to make sidebar responsive

--- a/index.html
+++ b/index.html
@@ -57,38 +57,50 @@
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-solid fa-share-nodes"></i>
+                    <div class="project-buttons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-share-nodes"></i>
+                    </div>
                 </div>
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-solid fa-share-nodes"></i>
+                    <div class="project-buttons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-share-nodes"></i>
+                    </div>
                 </div>
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-solid fa-share-nodes"></i>
+                    <div class="project-buttons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-share-nodes"></i>
+                    </div>
                 </div>
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-solid fa-share-nodes"></i>
+                    <div class="project-buttons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-share-nodes"></i>
+                    </div>
                 </div>
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-solid fa-share-nodes"></i>
+                    <div class="project-buttons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-share-nodes"></i>
+                    </div>
                 </div>
                 <div class="project-item">
                     <p class="project-title">Super Cool Project</p>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-solid fa-share-nodes"></i>
+                    <div class="project-buttons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-share-nodes"></i>
+                    </div>
                 </div>
             </div>
             <p class="announcement-header">Announcements</p>
@@ -137,4 +149,5 @@
         </div>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
