Add a js func, revise html structure, and revise css to make the page responsive

--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
                 </div>
             </div>
             <footer class="footer">
-                <p>Copyright © 2024 <a href="https://github.com/NathanC90/admin-dashboard">Nathanc90 <i class="fa-brands fa-github"></i></a>
-                    <span class="image-credit" data-tooltip="Image by rawpixel.com on Freepik"><a href="https://www.freepik.com/free-vector/vector-set-men-professions_3238354.htm#&position=0&from_view=search&track=ais&uuid=76e8df2a-3ea8-499e-a4d0-fc3620d072d7"><i class="fa-regular fa-closed-captioning"></i></span>
+                <p>Copyright © 2024 <a href="https://github.com/NathanC90/admin-dashboard">Nathanc90 <i class="fa-brands fa-github"></i></a><span><a href="https://www.freepik.com/free-vector/vector-set-men-professions_3238354.htm#&position=0&from_view=search&track=ais&uuid=76e8df2a-3ea8-499e-a4d0-fc3620d072d7"> <i class="fa-regular fa-closed-captioning"></i></a></span>
                 </p>
             </footer>
         </div>
